--- a/index.html
+++ b/index.html
@@ -1,50 +1,42 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Home</title>
-
-    <!--Bootstrap core css !-->
-    <link rel="stylesheet" href="/css/bootstrap.min.js">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+    <title></title>
   </head>
   <body>
-    <div class="container">
-      <!-- Static nav bar !-->
-      <nav class="navbar navbar-default navbar-static-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigarion</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-header" href="#">Project name</a>
-          </div>
-          <div class="navbar-brand" class="navbar-collapse collapse">
-            <ul>
-              <li class="active"><a href="#"></a>Home</li>
-              <li><a href="#"></a>Text</li>
-              <li><a href="#"></a>Text2</li>
-              <li class="dropdown-menu">
-                <li><a href="#"></a></li>
-              </li>
-            </ul>
-          </div>
+    <div class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span>Toggle nav</span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <a class="navbar-brand" href="#"></a>
         </div>
-      </nav>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active">Tag1</li>
+            <li><a href="#"></a>tag2</li>
+            <li><a href="#"></a>tag3</li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Action</a></li>
+                <li role="seperator" class="divider"></li>
+                <li><a href="#">Seperated link</a></li>
+              </ul>
+          </ul>
+
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
